# coursetools

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/agents/: Dev.agent.md
fixturedata/: projects.xml
src/coursetools/: app.py  codebase.py  config.py  repository.py  templates.py
src/templates/: docker.ini  javascript-patterns.ini  python.ini  runweek.ini  testing-excellence.ini  typescript-react.ini  typescript.ini
tasks/: list-codebase-projects.md
tests/: README.md  __init__.py  conftest.py  test_app.py  test_codebase.py  test_codebase_projects.py  test_config.py  test_repository.py  test_templates.py
