[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[project]
name = "coursetools"
version = "1.0.1"
description = "A Course Management Tool"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = []
authors = [
  {email = "ryan.adams@instil.co"},
  {name = "Ryan Adams"}
]
maintainers = [
  {name = "Ryan Adams", email = "ryan.adams@instil.co"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov[all]",
  "black",
  "pylint"
]

[project.urls]
homepage = "https://instil.co"
repository = "https://github.com/instil/coursetools"
#changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
makerepo = "coursetools.app:main"

[tool.black]
exclude = '''
/(
   \.direnv
  |\.eggs
  |\.git
  |\.mypy_cache
  |\.nox
  |\.tox
  |\.venv
  |_build
  |buck-out
  |build
  |dist
  |cdk.out
  |fixtures
)/
'''