[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=77", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "coursetools"
version = "1.0.6"
description = "A Course Management Tool"
readme = "README.md"
requires-python = ">=3.8"
keywords = []
authors = [
  {email = "ryan.adams@instil.co"},
  {name = "Ryan Adams"}
]
maintainers = [
  {name = "Ryan Adams", email = "ryan.adams@instil.co"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.1",
  "pytest-cov>=3.0",
  "black>=22.6",
  "pylint>=2.14"
]

[project.urls]
homepage = "https://instil.co"
repository = "https://github.com/instil/coursetools"
#changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
makerepo = "coursetools.app:main"

[tool.black]
exclude = '''
/(
   \.direnv
  |\.eggs
  |\.git
  |\.mypy_cache
  |\.nox
  |\.tox
  |\.venv
  |_build
  |buck-out
  |build
  |dist
  |cdk.out
  |fixtures
)/
'''

[tool.setuptools]
# Enable package discovery
packages = {find = {where = ["src"]}}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=coursetools",
    "--cov-report=term-missing",
    "--cov-report=html",
]